# theo-server

./: .env.example  Dockerfile  README.md  docker-compose.yml  prompts.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: health.py  quotations.py
app/core/: config.py  logging.py
app/db/: gremlin.py
app/models/: schemas.py
app/services/: quotation_service.py
src/theo_server/: __main__.py  config.py  main.py  security.py
src/theo_server/api/: routes.py  schemas.py
src/theo_server/db/: gremlin.py
src/theo_server/services/: importer.py
tests/: test_api.py  test_health.py
